tests/artifacts/tlsroute-tls-problems.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  generation: 1
  name: tls-gw-problems
  namespace: default
  resourceVersion: "2886"
  uid: c435653a-2de9-4020-a816-f4e16013a022
spec:
  gatewayClassName: eg
  listeners:
  - name: tls-selfsigned
    port: 443
    protocol: TLS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: selfsigned-tls
  - name: tls-passthrough
    port: 444
    protocol: TLS
    tls:
      mode: Passthrough
status:
  conditions:
  - lastTransitionTime: "2026-06-26T23:42:41Z"
    message: The Gateway has been scheduled by Envoy Gateway
    observedGeneration: 1
    reason: Accepted
    status: "True"
    type: Accepted
  listeners:
  - attachedRoutes: 1
    conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Listener references have been resolved
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    name: tls-selfsigned
  - attachedRoutes: 1
    conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Listener references have been resolved
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    name: tls-passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  generation: 1
  name: tls-route-selfsigned
  namespace: default
  resourceVersion: "2887"
  uid: c435653a-2de9-4020-a816-f4e16013a023
spec:
  hostnames:
  - selfsigned.example.com
  parentRefs:
  - name: tls-gw-problems
    sectionName: tls-selfsigned
  rules:
  - backendRefs:
    - kind: Service
      name: tls-backend
      port: 443
status:
  parents:
  - parentRef:
      name: tls-gw-problems
      sectionName: tls-selfsigned
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
    conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Route was valid
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  generation: 1
  name: tls-route-passthrough
  namespace: default
  resourceVersion: "2888"
  uid: c435653a-2de9-4020-a816-f4e16013a024
spec:
  parentRefs:
  - name: tls-gw-problems
    sectionName: tls-passthrough
  rules:
  - backendRefs:
    - kind: Service
      name: tls-backend
      port: 444
status:
  parents:
  - parentRef:
      name: tls-gw-problems
      sectionName: tls-passthrough
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
    conditions:
    - lastTransitionTime: "2026-06-26T23:42:41Z"
      message: Route was valid
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
---
apiVersion: v1
kind: Secret
metadata:
  creationTimestamp: "2026-06-26T23:39:52Z"
  name: selfsigned-tls
  namespace: default
  resourceVersion: "2883"
  uid: b435653a-2de9-4020-a816-f4e16013a014
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPVENDQWlHZ0F3SUJBZ0lVVUhrQWNlS3I2UEkrSFRsQURsbUQxblZ1TXJZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hERWFNQmdHQTFVRUF3d1JiM1JvWlhJdVpYaGhiWEJzWlM1amIyMHdJQmNOTWpZd056QTBNakV6TXpFeQpXaGdQTWpFeU5qQTJNVEF5TVRNek1USmFNQnd4R2pBWUJnTlZCQU1NRVc5MGFHVnlMbVY0WVcxd2JHVXVZMjl0Ck1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBdnZZYzdQbmd5OGthZUFxZVR3SXgKSkFCT0FEbnB3MnR6Zld1S051dmtLa0pYMTdBdzU1eWgvOG5CNDRYdHp3WFFheUozWGZRTXV5b20zRFYyL0dHbApyaVY2WTVWWmhPVVBXS [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQys5aHpzK2VETHlScDQKQ3A1UEFqRWtBRTRBT2VuRGEzTjlhNG8yNitRcVFsZlhzRERubktIL3ljSGpoZTNQQmRCckluZGQ5QXk3S2liYwpOWGI4WWFXdUpYcGpsVm1FNVE5WWlHSUNUbHlWWGZFT1MrKzNWb3JRdmRSdG1zVkRpYXpVV0svbzlEZXh5T2ZDCndOSEJOOHBLTnNRdko5YjNueVJOWnBPV2xxSXJPWW5HUzVnUmJRemV4T3A2N1A5MHRBdytVcTlFblRHL3VkUGMKTjZYUC9DT2gwVW1GVnZzeG5kYTJBUmRJTC9uajJ3ZW11OWxFZWd3ekRCcklVdzJIeXJkVHE3N2phVlcwams1NgpMV3RKc0k4bHVwb1M5V [...]
